--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,20 @@
 services:
-  app:
+  webapp:
     build: .
+    image: emby-auto-checkin:latest
+    container_name: emby-auto-checkin-webapp
     ports:
       - "5055:5055"
     volumes:
       - ./data:/app/data
     restart: unless-stopped
+    command: gunicorn -w 1 -b 0.0.0.0:5055 app:app
+
+  scheduler:
+    build: .
+    image: emby-auto-checkin:latest
+    container_name: emby-auto-checkin-scheduler
+    volumes:
+      - ./data:/app/data
+    restart: unless-stopped
+    command: python run_scheduler.py
