--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-telethon
-Flask[async]
-apscheduler
-Flask-Login
-Werkzeug
-gunicorn
-SQLAlchemy
-httpx
+telethon==1.34.0
+Flask[async]==3.0.0
+Flask-Login==0.6.3
+Werkzeug==3.0.1
+gunicorn==21.2.0
+SQLAlchemy==2.0.25
+httpx==0.26.0
+apscheduler==3.10.4
