--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   webapp:
     build: .
@@ -8,6 +10,11 @@ services:
     volumes:
       - ./data:/app/data
     restart: unless-stopped
+    depends_on:
+      - tg_service
+    environment:
+      - TG_SERVICE_HOST=tg_service
+      - TG_SERVICE_PORT=5056
     command: gunicorn -w 1 -b 0.0.0.0:5055 app:app
 
   scheduler:
@@ -17,4 +24,20 @@ services:
     volumes:
       - ./data:/app/data
     restart: unless-stopped
+    depends_on:
+      - tg_service
+    environment:
+      - TG_SERVICE_HOST=tg_service
+      - TG_SERVICE_PORT=5056
     command: python run_scheduler.py
+
+  tg_service:
+    build: .
+    image: emby-auto-checkin:latest
+    container_name: emby-auto-checkin-tg-service
+    ports:
+      - "5056:5056"
+    volumes:
+      - ./data:/app/data
+    restart: unless-stopped
+    command: uvicorn tg_service.main:app --host 0.0.0.0 --port 5056
