--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     environment:
       - TG_SERVICE_HOST=tg_service
       - TG_SERVICE_PORT=5056
-    command: gunicorn -w 1 -b 0.0.0.0:5055 app:app
+    command: gunicorn -w 1 -b 0.0.0.0:5055 webapp:app
 
   scheduler:
     build: .
