重构调度器相关功能

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,15 +10,20 @@ services:
     restart: unless-stopped
     depends_on:
       - tg_service
+      - scheduler
     environment:
       - TG_SERVICE_HOST=tg_service
       - TG_SERVICE_PORT=5056
+      - SCHEDULER_HOST=scheduler
+      - SCHEDULER_PORT=5057
     command: gunicorn -w 1 -b 0.0.0.0:5055 'webapp:create_app()'
 
   scheduler:
     build: .
     image: emby-auto-checkin:latest
     container_name: emby-auto-checkin-scheduler
+    ports:
+      - "5057:5057"
     volumes:
       - ./data:/app/data
     restart: unless-stopped
@@ -27,7 +32,7 @@ services:
     environment:
       - TG_SERVICE_HOST=tg_service
       - TG_SERVICE_PORT=5056
-    command: python run_scheduler.py
+    command: gunicorn -w 1 -b 0.0.0.0:5057 'run_scheduler:app'
 
   tg_service:
     build: .
